# EyeGuardian

backend/: pyproject.toml
backend/core/: settings.py
frontend/: package-lock.json
